# promptdumper

./: .gitignore  README.md  index.html  llm_rules.json  package.json  pnpm-lock.yaml  release.sh  tailwind.config.js
src/: App.tsx  index.css  main.tsx  syntax.ts
src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: ca.rs  capture.rs  http_shared.rs  lib.rs  llm_rules.rs  main.rs  process_lookup.rs  proxy.rs
src-tauri/src/proxy/: flows.rs  mitm_handlers.rs  mitm_service.rs  mitm_session.rs  mod.rs  parse.rs  tests.rs  tls.rs  upstream.rs
src/components/: BodyPreview.tsx  HttpHeaders.tsx  MarkdownView.tsx  ProviderIcon.tsx
src/components/ui/: BigCodeViewer.tsx  alert-dialog.tsx  alert.tsx  button.tsx  checkbox.tsx  resizable.tsx  scroll-area.tsx  select.tsx  tabs.tsx
src/types/: http.ts
src/utils/: http.ts  llm.ts
